Add link para Index Digital

--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -6,7 +6,7 @@ description: Um resumo do que eu consigo fazer com um pouco de código.
 
 about_me: >
   <p>
-    Atualmente faço parte da equipe de Desenvolvedores Web na Index Digital. Gosto de pensar em soluções legíveis e elegantes (nessa ordem) para interfaces, entender o funcionamento de sistemas e de contribuir para criar workflows mais rápidos e limpos.
+    Atualmente faço parte da equipe de Desenvolvedores Web na <a href="https://idx.digital/">Index Digital</a>. Gosto de pensar em soluções legíveis e elegantes (nessa ordem) para interfaces, entender o funcionamento de sistemas e de contribuir para criar workflows mais rápidos e limpos.
   </p>
 
   <p>
